[package]
name = "shortDbBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.0"
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.11"
prost = "0.12.3"
tonic-web = "0.11"
tower-http = "0.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
